--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           </div>
           <div class="note">
             <div class="category-title">Note</div>
-            <textarea placeholder="Click to add a note"></textarea>
+            <textarea id="note" placeholder="Click to add a note"></textarea>
           </div>
 
         </div>
