--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="badges-container">
               <div class="badge-item">
                 <img src="./assets/img/badges/nitro.webp" alt="" />
-                <div class="tooltip tooltip-up">Suscriber</div>
+                <div class="tooltip tooltip-up">subscriber</div>
               </div>
 
             </div>
@@ -53,7 +53,7 @@
           </div>
           <div class="note">
             <div class="category-title">Note</div>
-            <textarea id="note" placeholder="Click to add a note"></textarea>
+            <textarea placeholder="Click to add a note"></textarea>
           </div>
 
         </div>
