--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="badges-container">
               <div class="badge-item">
                 <img src="./assets/img/badges/nitro.webp" alt="" />
-                <div class="tooltip tooltip-up">subscriber</div>
+                <div class="tooltip tooltip-up">Subscriber</div>
               </div>
 
             </div>
